Added publications page

--- a/_config.yml
+++ b/_config.yml
@@ -17,6 +17,7 @@ permalink: "/:title/"
 pages_list:
     Research: '/research'
     Teaching: '/teaching'
+    Publications: '/publications'
 
 markdown: kramdown
 
